--- a/src/components/background/Background.module.scss
+++ b/src/components/background/Background.module.scss
@@ -7,7 +7,7 @@
 	font-weight: 900;
 	color: rgba($black, 0.25);
 	position: absolute;
-	top: -48px;
+	top: -28px;
 	z-index: -10;
 
 	@include breakpoint('md', max) {
